# nekosearch

./: Cargo.toml  README.md  deny.toml
.github/workflows/: cargo_publish.yml  count_tests.yml
src/: lib.rs
src/components/: cosine.rs  damerau_levenshtein.rs  dto.rs  fonetic.rs  jaccard.rs  jaro.rs  lcs.rs  levenshtein.rs  mod.rs  prelude.rs  search.rs
tests/: cosine.rs  damerau_levenshtein.rs  fonetic.rs  jaccard.rs  jaro.rs  lcs.rs  levenshtein.rs  nekosearch.rs
